--- a/assets/widgets/Tabs.less
+++ b/assets/widgets/Tabs.less
@@ -43,7 +43,7 @@
     &:focus {
         outline: none;
         /* FIXME need a var for this, it was copied from .form-item-focusable:focus */
-        --tab-shape-color: @focus_blue_dark;
+        --tab-shape-color: @focus_blue;
     }
 }
 /* current tab */
