--- a/assets/base.less
+++ b/assets/base.less
@@ -2,7 +2,7 @@
  * Global base styles for the Yarrharr UI.
  */
 @import "~normalize.css/normalize.css";
-@import "./globals.less";
+@import "./include.less";
 
 :root {
     --layout-max-width: 50rem;
