--- a/assets/base.less
+++ b/assets/base.less
@@ -8,6 +8,7 @@
     --layout-max-width: 50rem;
     --text-color: @content_text_color;
     --background-color: @content_background_color;
+    --border-color: #ddd;
 }
 .layout-wide {
     --layout-max-width: none;
@@ -97,19 +98,20 @@ input[type=url],
 input[type=email],
 select[multiple] {
     .form-item-layout;
-    --background-color: white;
-    --border-color: @quiet_text_color;
 
-    color: @content_text_color;
-    background: var(--background-color);
+    color: var(--text-color);
+    background: white;
     border: @button_border_width solid var(--border-color);
-    border-radius: @text_padding;
     transition: border-color 0.05s;
 
     &:focus {
         --border-color: @focus_blue;
-        --background-color: white;
+        box-shadow: inset 0 0 0 1.5px white;
         outline: none;
+    }
+    & ::placeholder {
+        opacity: 0.8;
+        color: inherit;
     }
 }
 select[multiple] {
@@ -120,11 +122,11 @@ select[multiple] {
     .form-item-layout;
     cursor: pointer;
 
-    color: @content_text_color;
-    --gradient-start: white;
-    --gradient-mid: gray;
-    --gradient-end: gray;
-    --gradient-border-color: @text_color;
+    color: var(--text-color);
+    --gradient-start: var(--background-color);
+    --gradient-mid: var(--background-color);
+    --gradient-end: var(--background-color);
+    --gradient-border-color: var(--text-color);
 
     background: linear-gradient(to bottom, var(--gradient-start) 0%, var(--gradient-mid) 28%, var(--gradient-end) 100%);
     border: @button_border_width solid var(--gradient-border-color);
