Crude label table

--- a/assets/views/InventoryView.less
+++ b/assets/views/InventoryView.less
@@ -16,7 +16,6 @@
     }
     tr {
         display: grid;
-        grid-template-columns: 2rem 2.5rem 2fr 1fr 1fr 1.5rem;
     }
     th, td, td > a {
         display: block;
@@ -31,6 +30,14 @@
     }
     .col-edit {
     }
+}
+
+.feed-table tr {
+    grid-template-columns: 2rem 2.5rem 2fr 1fr 1fr 1.5rem;
+}
+
+.label-table tr {
+    grid-template-columns: 2rem 1fr 2rem 1.5rem;
 }
 
 .inventory-item {
