Add Firefox feed discovery integration

--- a/assets/base.less
+++ b/assets/base.less
@@ -122,11 +122,11 @@ select[multiple] {
     .form-item-layout;
     cursor: pointer;
 
-    color: var(--text-color);
-    --gradient-start: var(--background-color);
-    --gradient-mid: var(--background-color);
-    --gradient-end: var(--background-color);
-    --gradient-border-color: var(--text-color);
+    color: white;
+    --gradient-start: #444;
+    --gradient-mid: #333;
+    --gradient-end: #323232;
+    --gradient-border-color: #151515;
 
     background: linear-gradient(to bottom, var(--gradient-start) 0%, var(--gradient-mid) 28%, var(--gradient-end) 100%);
     border: @button_border_width solid var(--gradient-border-color);
