--- a/assets/views/InventoryView.less
+++ b/assets/views/InventoryView.less
@@ -63,3 +63,10 @@
         margin-left: @text_padding;
     }
 }
+
+.register-feed-reader-form {
+    input {
+        display: inline-block;
+        width: auto;
+    }
+}
