New arrow, home icons. Icon sprite.

--- a/assets/widgets/icons.less
+++ b/assets/widgets/icons.less
@@ -1,3 +1,6 @@
+#icon-sprites {
+    display: none;
+}
 /* Icons have this class by default, which makes them a generic gray. */
 .icon {
     color: #666;
