Rework checkbox icon
Now ReadToggle represents the "unread" state as a circle, which
transforms into a green checkmark when toggled. The animation isn't
great, but it's better than it was.

--- a/assets/base.less
+++ b/assets/base.less
@@ -9,6 +9,7 @@
     --text-color: @content_text_color;
     --background-color: @content_background_color;
     --border-color: #ddd;
+    --icon-color: #666;
 }
 .layout-wide {
     --layout-max-width: none;
