Create HeartIcon, rework FaveToggle
Also add aria-pressed to FaveToggle and ReadToggle, per #221.

--- a/assets/base.less
+++ b/assets/base.less
@@ -10,6 +10,9 @@
     --background-color: @content_background_color;
     --border-color: #ddd;
     --icon-color: #666;
+    --icon-color-off: var(--border-color);
+    --heart-color: #9b1559;
+    --check-color: #2a6e12;
 }
 .layout-wide {
     --layout-max-width: none;
