Remove homepage underlines

--- a/assets/views/RootView.less
+++ b/assets/views/RootView.less
@@ -20,7 +20,8 @@
             display: flex;
             align-items: center;
             justify-content: left;
-            min-height: 2.5rem;
+            height: @bar_height;
+            padding: 0 @text_padding;
         }
         a:focus {
             .flat-button-focus;
