Rework tabs with aria-selected
A step forward to <https://www.w3.org/TR/wai-aria-practices/#tabpanel>,
though woefully incomplete.

--- a/assets/widgets/Tabs.less
+++ b/assets/widgets/Tabs.less
@@ -45,7 +45,7 @@
     }
 }
 /* current tab */
-.tabs-tabs > a[aria-disabled="true"] {
+.tabs-tabs > a[aria-selected=true] {
     --tab-shape-color: var(--border-color);
     --tab-background-color: var(--background-color);
     margin-bottom: 0;
