Match unread color to unfave'd color

--- a/assets/widgets/StateToggle.less
+++ b/assets/widgets/StateToggle.less
@@ -8,7 +8,7 @@
 
 .read-toggle {
     circle {
-        stroke: var(--icon-color);
+        stroke: var(--icon-color-off);
         stroke-width: 2;
         fill: none;
         transition: all 100ms ease;
