Reduce prominence of list item metadata

--- a/assets/widgets/ListArticle.less
+++ b/assets/widgets/ListArticle.less
@@ -38,6 +38,8 @@
         }
         .meta {
             color: @quiet_text_color;
+            text-transform: uppercase;
+            font-size: smaller;
         }
         .icon {
             position: relative;
