Lighter outbound icon
This icon is too visually heavy to be so dark.

--- a/assets/widgets/ListArticle.less
+++ b/assets/widgets/ListArticle.less
@@ -66,6 +66,7 @@
         }
         .outbound-icon {
             grid-area: outbound-icon;
+            --icon-color: lightgray;
         }
     }
 
