--- a/assets/base.less
+++ b/assets/base.less
@@ -223,7 +223,8 @@ select[multiple] {
         justify-content: center;
     }
 
-    & > a[href]:focus {
+    & > a[href]:focus,
+    & > button:focus {
         .flat-button-focus;
     }
 
