--- a/assets/include.less
+++ b/assets/include.less
@@ -38,6 +38,7 @@
 .flat-button() {
     display: block;
     box-sizing: border-box;
+    border: none;
 
     background: transparent;
     box-shadow: inset 0 0 0 0 transparent;
