Make toggle buttons toggle <button>s
Closes #221.

--- a/assets/include.less
+++ b/assets/include.less
@@ -39,6 +39,7 @@
     display: block;
     box-sizing: border-box;
     border: none;
+    padding: 0; /* Otherwise Firefox assigns padding in button:active to simulate "press". */
 
     background: transparent;
     box-shadow: inset 0 0 0 0 transparent;
