None of this seems to help

--- a/assets/base.less
+++ b/assets/base.less
@@ -26,6 +26,7 @@ html {
     overflow-y: scroll;
     color: var(--text-color);
     background: var(--background-color);
+    touch-action: manipulation;
 
     a {
         color: var(--text-color);
