--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -25,7 +25,7 @@ article {
     }
 
     .meta {
-        color: @quiet_text_color;
+        color: var(--quiet-text-color);
         margin-top: 1rem;
         p {
             margin: 0;
@@ -58,7 +58,7 @@ article {
 
         hr {
             margin: 16px 32px;
-            border: 0.5px solid @quiet_text_color;
+            border: 0.5px solid var(--quiet-text-color);
         }
 
         pre {
