--- a/assets/widgets/ListArticle.less
+++ b/assets/widgets/ListArticle.less
@@ -47,7 +47,7 @@
         }
         .meta {
             grid-area: meta;
-            color: @quiet_text_color;
+            color: var(--quiet-text-color);
             text-transform: uppercase;
             font-size: smaller;
             // background: red;
