--- a/assets/include.less
+++ b/assets/include.less
@@ -7,9 +7,6 @@
 @background_color: rgba(250, 250, 250, 1.0);
 @text_color: rgb(20, 20, 20);
 
-@toolbar_height: 2.5rem;
-@toolbar_background_color: darken(@content_background_color, 10%);
-
 /* There is always this much padding between text and the edge of stuff. */
 @text_padding: 0.25rem;
 
@@ -25,16 +22,6 @@
 @content_text_color: black;
 @quiet_text_color: lighten(@content_text_color, 40%);
 
-@logo_orange_light: #f17e31;
-@logo_orange: #fb6500;
-@logo_orange_dark: #da5200;
-
-@focus_blue_light: #37ABE5;
-@focus_blue: #0098ff;
-@focus_blue_dark: #0070bb;
-
-@narrow_width: 50rem;
-
 .flat-button() {
     display: block;
     box-sizing: border-box;
@@ -47,5 +34,5 @@
 
 .flat-button-focus() {
     outline: none;
-    box-shadow: inset 0 0 0 @button_border_width @focus_blue;
+    box-shadow: inset 0 0 0 @button_border_width var(--focus-color);
 }
