--- a/assets/base.less
+++ b/assets/base.less
@@ -91,7 +91,7 @@ h1 {
 label:not(.checkbox) {
     display: block;
     font-size: 0.9rem;
-    color: @text_color;
+    color: var(--quiet-text-color);
 }
 
 label.checkbox {
@@ -306,6 +306,6 @@ form.small-form {
 footer {
     padding: 3em 0.25em;
     text-align: center;
-    background: @background_color;
-    color: @text_color;
+    background: #fafafa;
+    color: #141414;
 }
