Rework home/feeds/labels/add navigation
This still needs work. These sections aren't really tabs — this is just
navigation.

--- a/assets/widgets/Tabs.less
+++ b/assets/widgets/Tabs.less
@@ -11,6 +11,7 @@
 .tabs {
     contain: layout style;
     background: var(--background-color);
+    flex-basis: 100%;
 }
 .tabs-tabs {
     max-width: var(--layout-max-width);
