--- a/assets/views/FeedView.less
+++ b/assets/views/FeedView.less
@@ -26,33 +26,7 @@
 }
 
 .snapshot-nav {
-    // background: #eee;
-    margin: 0 3rem;
-}
-.snapshot-nav-prev {
-}
-.snapshot-nav-icon {
-}
-.snapshot-nav-text {
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: stretch;
-
-    &>* {
-        flex: 1 1 auto;
-        min-width: 0;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-    }
-}
-.snapshot-nav-title {
-    // background: yellow;
-}
-.snapshot-nav-status {
-    // background: violet;
-}
-.snapshot-nav-order {
-}
-.snapshot-nav-next {
+    background: #fbfbfb;
+    position: sticky;
+    bottom: 0;
 }
