--- a/assets/views/FeedView.less
+++ b/assets/views/FeedView.less
@@ -26,7 +26,8 @@
 }
 
 .snapshot-nav {
-    background: #fbfbfb;
+    background: var(--background-color);
+    border-top: 1px solid var(--border-color);
     position: sticky;
     bottom: 0;
 }
