--- a/assets/include.less
+++ b/assets/include.less
@@ -16,13 +16,16 @@
 @bar_height: calc(2 * @bar_line_height + 2 * @text_padding + 2 * @button_border_width);
 
 .flat-button() {
-    display: block;
     box-sizing: border-box;
     border: none;
     padding: 0; /* Otherwise Firefox assigns padding in button:active to simulate "press". */
 
     background: transparent;
     box-shadow: inset 0 0 0 0 transparent;
+}
+
+.flat-button-hover() {
+    background: var(--hover-background-color);
 }
 
 .flat-button-focus() {
