--- a/assets/widgets/ListArticle.less
+++ b/assets/widgets/ListArticle.less
@@ -28,6 +28,7 @@
 
     .outbound {
         .flat-button;
+        &:hover { .flat-button-hover; }
         &:focus { .flat-button-focus; }
         padding: ((2 * @button_border_width));
         flex: 1 1 100%;
@@ -65,6 +66,7 @@
         flex: 0 0 @bar_height;
 
         .flat-button;
+        &:hover { .flat-button-hover; }
         &:focus { .flat-button-focus; }
     }
     .read-toggle {
