--- a/assets/base.less
+++ b/assets/base.less
@@ -23,6 +23,19 @@
     --focus-color: #0098ff;
     --selected-color: hsl(24.1, 100%, 49.2%);
 }
+
+:root.theme-dark {
+    --background-color: black;
+    --text-color: white;
+    --quiet-text-color: darken(white, 40%);
+    --footer-background-color: #111;
+    --footer-text-color: #eee;
+
+    --border-color: #222;
+    --icon-color: #eee;
+    --hover-background-color: #111;
+}
+
 .layout-wide {
     --layout-max-width: none;
 }
