--- a/assets/base.less
+++ b/assets/base.less
@@ -123,7 +123,7 @@ select[multiple] {
 
     &:focus {
         --border-color: var(--focus-color);
-        box-shadow: inset 0 0 0 1.5px white;
+        box-shadow: inset 0 0 0 1.5px var(--background-color);
         outline: none;
     }
     & ::placeholder {
@@ -323,5 +323,5 @@ footer {
     padding: 3em 0.25em;
     text-align: center;
     background: var(--footer-background-color);
-    color: var(--footer-text-color):
+    color: var(--footer-text-color);
 }
