--- a/assets/base.less
+++ b/assets/base.less
@@ -18,8 +18,8 @@
     --icon-color-off: var(--border-color);
     --hover-background-color: #fafafa;
 
-    --heart-color: #9b1559; // TODO Make this more vibrant
-    --check-color: #2a6e12; // TODO Make this more vibrant
+    --heart-color: #c92ccc;
+    --check-color: #39cc5c;
     --focus-color: #0098ff;
     --selected-color: hsl(24.1, 100%, 49.2%);
 }
