Functioning favicon Webpack plugin
Though Webpack generates some deprecation warnings.

--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -6,10 +6,10 @@
         <title>{% block title %}{{ title|default:"Yarrharr" }}{% endblock %}</title>
         {# XXX Does user-scalable=no do anything anymore? #}
         <meta name="viewport" content="width=device-width, user-scalable=no">
-        {# <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{% static 'icon-*.ico'|newest_static %}"> #}
-        {# <link rel="icon" sizes="152x152" type="image/png" href="{% static 'icon-*.png'|newest_static %}"> #}
+        <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="{% static 'icon-*.ico'|newest_static %}">
+        <link rel="icon" sizes="152x152" type="image/png" href="{% static 'icon-*.png'|newest_static %}">
         <link rel="icon" sizes="any" type="image/svg+xml" href="{% static 'icon-*.svg'|newest_static %}">
-        {# <link rel="apple-touch-icon-precomposed" type="image/png" href="{% static 'icon-*.png'|newest_static %}"> #}
+        <link rel="apple-touch-icon-precomposed" type="image/png" href="{% static 'icon-*.png'|newest_static %}">
         <link rel="stylesheet" type="text/css" href="{% static 'vendor-*.css'|newest_static %}">
         <link rel="stylesheet" type="text/css" href="{% static 'main-*.css'|newest_static %}">
         <script src="{% static 'runtime-*.js'|newest_static %}" defer></script>
@@ -24,7 +24,7 @@
             {% if user.is_authenticated %}
                 <p><a href="{% url 'home' %}">Home</a> ∙ <a href="{% url 'logout' %}">Log out</a>
             {% endif %}
-            <p>Yarrharr Feed Reader ∙ © 2013–2018 Tom Most ∙ GPLv3+ ∙ <a href="{% url 'about' %}">About</a> ∙ <a rel="noreferrer noopener" href="https://github.com/twm/yarrharr/issues/new">Report Issue</a>
+            <p>Yarrharr Feed Reader ∙ © 2013–2019 Tom Most ∙ GPLv3+ ∙ <a href="{% url 'about' %}">About</a> ∙ <a rel="noreferrer noopener" href="https://github.com/twm/yarrharr/issues/new">Report Issue</a>
         </footer>
 
         {% if debug %}
