Less hackish plumbing

--- a/yarrharr/templates/about.html
+++ b/yarrharr/templates/about.html
@@ -11,7 +11,7 @@
     <p><a href="https://pypi.python.org/pypi/feedparser">feedparser</a> {{ feedparser_version }}
     {# TODO Add Twisted, OpenSSL, etc. versions #}
     <h2>License</h2>
-    <p>Copyright © 2013, 2014, 2015, 2016, 2017 Tom Most
+    <p>Copyright © 2013, 2014, 2015, 2016, 2017, 2018, 2019 Tom Most
     <p>This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
