--- a/yarrharr/templates/base.html
+++ b/yarrharr/templates/base.html
@@ -10,8 +10,11 @@
         <link rel="icon" sizes="152x152" type="image/png" href="{% static 'icon-*.png'|newest_static %}">
         <link rel="icon" sizes="any" type="image/svg+xml" href="{% static 'icon-*.svg'|newest_static %}">
         <link rel="apple-touch-icon-precomposed" type="image/png" href="{% static 'icon-*.png'|newest_static %}">
+        {% if not HOT %}
+        {# Stylesheets are in the JS when using Webpack hot module replacement. #}
         <link rel="stylesheet" type="text/css" href="{% static 'vendor-*.css'|newest_static %}">
         <link rel="stylesheet" type="text/css" href="{% static 'main-*.css'|newest_static %}">
+        {% endif %}
         <script src="{% static 'runtime-*.js'|newest_static %}" defer></script>
         <script src="{% static 'vendor-*.js'|newest_static %}" defer></script>
         <script src="{% static 'main-*.js'|newest_static %}" defer></script>
