<body class="focus-visible"> instead
Let's avoid premature generality.

--- a/assets/views/HomeView.less
+++ b/assets/views/HomeView.less
@@ -18,7 +18,7 @@
         a {
             .flat-button;
             &:hover { .flat-button-hover; }
-            body.inputmode-keyboard &:focus { .flat-button-focus; }
+            body.focus-visible &:focus { .flat-button-focus; }
 
             display: flex;
             align-items: center;
