--- a/assets/base.less
+++ b/assets/base.less
@@ -95,10 +95,10 @@ h1 {
  * hopefully be replaced with the pseudo-class :focus-visible in time, but
  * browser support is nearly nonexistent right now and hasn't improved in the
  * last year. */
-body.inputmode-keyboard :focus {
+body.focus-visible :focus {
     outline: 1px dotted var(--focus-color);
 }
-body:not(.inputmode-keyboard) :focus {
+body:not(.focus-visible) :focus {
     outline: none;
 }
 
@@ -179,11 +179,11 @@ select[multiple] {
         background: linear-gradient(to top, var(--gradient-start) 0%, var(--gradient-mid) 28%, var(--gradient-end) 100%);
         box-shadow: inset var(--gradient-end) 0 0 .25rem;
     }
-    body.inputmode-keyboard &:focus {
+    body.focus-visible &:focus {
         box-shadow: inset 0 0 0 1.5px currentColor;
         outline: none;
     }
-    body.inputmode-keyboard &:active:focus {
+    body.focus-visible &:active:focus {
         box-shadow: inset 0 0 0 1.5px currentColor,
                     inset var(--gradient-end) 0 0 .25rem;
     }
@@ -254,7 +254,7 @@ select[multiple] {
     & > button {
         .flat-button;
         &:hover { .flat-button-hover; }
-        body.inputmode-keyboard &:focus { .flat-button-focus; }
+        body.focus-visible &:focus { .flat-button-focus; }
     }
 
     & > * {
