Normalize article view and list view styling

--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -25,6 +25,8 @@ article {
     }
 
     .meta {
+        text-transform: uppercase;
+        font-size: smaller;
         color: var(--quiet-text-color);
         margin-top: 1rem;
         p {
