--- a/assets/widgets/Article.less
+++ b/assets/widgets/Article.less
@@ -28,7 +28,7 @@ article {
         text-transform: uppercase;
         font-size: smaller;
         color: var(--quiet-text-color);
-        margin-top: 1rem;
+        margin: 1rem auto;
         p {
             margin: 0;
         }
