--- a/assets/widgets/StateToggle.less
+++ b/assets/widgets/StateToggle.less
@@ -1,6 +1,15 @@
-.fave-toggle .icon {
-    color: var(--icon-color-off);
-    transition: all 200ms ease;
+.fave-toggle {
+    .inactive {
+        fill: var(--icon-color-off);
+    }
+    .active {
+        fill: var(--heart-color);
+        transform: translateY(100%);
+        transition: transform 200ms ease;
+    }
+    &[aria-pressed=true] .active {
+        transform: translateY(0);
+    }
 }
 .fave-toggle[aria-pressed=true] .icon {
     color: var(--heart-color);
