Style scrollbars in dark mode
Closes #355.

--- a/assets/base.less
+++ b/assets/base.less
@@ -35,6 +35,8 @@
     --icon-color: #eee;
     --icon-color-off: #666;
     --hover-background-color: #111;
+
+    scrollbar-color: var(--quiet-text-color) var(--background-color);
 }
 
 .layout-wide {
