Convert label list to grid

--- a/assets/views/InventoryView.less
+++ b/assets/views/InventoryView.less
@@ -36,8 +36,11 @@
     grid-template-columns: 2rem 2.5rem 2fr 1fr 1fr 1.5rem;
 }
 
-.label-table tr {
-    grid-template-columns: 2rem 1fr 2rem 1.5rem;
+.label-list {
+    display: grid;
+    grid-template-columns: 1fr min-content min-content min-content;
+    grid-gap: 1rem 1.5rem;
+    white-space: nowrap;
 }
 
 .inventory-tools {
