--- a/assets/views/InventoryView.less
+++ b/assets/views/InventoryView.less
@@ -157,7 +157,7 @@
     }
 
     // Zebra stripes
-    .label-list-item:nth-child(even) > td {
+    .label-list-item:nth-child(odd) > td {
         background: var(--footer-background-color);
     }
 }
